update back color

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: tan;
+    background-color: rgb(163, 121, 66);
     text-align: center;
     font-family: Garamond, Georgia, Times, serif;
 }
