--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: rgb(163, 121, 66);
     text-align: center;
-    font-family: Garamond, Georgia, Times, serif;
+    font-family: 'EB Garamond', serif;
 }
 img{
   border: 1px solid black;
