--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,3 +16,9 @@ li{
     font-style: italic;
     font-size: 12px;
 }
+footer{
+    font-size: 10px
+    text-align: right;
+    float: right;
+    position: relative;
+}
