added home text

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,9 +16,14 @@ li{
     font-style: italic;
     font-size: 12px;
 }
+div {
+  width: 305px;
+  padding: 10px;
+  margin: 100px;
+  text-align: left;
+}
 footer{
     font-size: 10px
     text-align: right;
     float: right;
-    position: fixed;
 }
