--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,14 +16,23 @@ li{
     font-style: italic;
     font-size: 12px;
 }
-div {
+#hometext{
   width: 305px;
   padding: 10px;
-  margin: 100px;
+  margin: 75px;
   text-align: left;
+  display: inline-block;
+  vertical-align:top;
+}
+#homephoto{
+    width: 400px;
+    height: 600px;
+    padding: 10px;
+    margin: 100px;
+    display: inline-block;
 }
 footer{
-    font-size: 10px
+    font-size: 10px;
     text-align: right;
-    float: right;
+    position: relative;
 }
