--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,6 +31,11 @@ li{
     margin: 100px;
     display: inline-block;
 }
+#homephoto2{
+    padding: 10px;
+    margin: 10px;
+    display: inline-block;
+}
 #riverlink{
     font-size: 24px;
     font-style: italic;
