--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -61,6 +61,11 @@ li{
     padding-top: 50px;
     padding-bottom: 50px;
 }
+#abouttext{
+    text-align: center;    
+    width: 500px;
+    margin: 0 auto;
+}
 footer{
     font-size: 12px;
     text-align: center;
