--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -62,7 +62,7 @@ li{
     padding-bottom: 50px;
 }
 #abouttext{
-    text-align: center;    
+    text-align: left;    
     width: 500px;
     margin: 0 auto;
 }
