--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,6 +27,9 @@ li{
   display: inline-block;
   vertical-align: top;
 }
+p.intro:first-letter{
+    font-size: 200%;
+}
 #homephoto{
     width: 400px;
     height: 600px;
